fix: stage cross overlap + template node issue

--- a/src/modules/70-pipeline/components/PipelineDiagram/Nodes/DefaultNode/DefaultNode.module.scss
+++ b/src/modules/70-pipeline/components/PipelineDiagram/Nodes/DefaultNode/DefaultNode.module.scss
@@ -189,7 +189,7 @@
     height: 14px !important;
     padding: 0 !important;
     align-items: center;
-    z-index: 1;
+    z-index: 100;
     cursor: pointer;
     &::after {
       content: '';
